// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocaleProvider demo -- componentlocale 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c7::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7::-moz-placeholder {
  color: #abb4c3;
}

.c7:-ms-input-placeholder {
  color: #abb4c3;
}

.c7::placeholder {
  color: #abb4c3;
}

.c9 {
  color: #c3cad9;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c4 .c6 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c4 .c6:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c4 .style__HandlerUp-laNuFx,
.c4 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c4 .style__HandlerUp-laNuFx:hover,
.c4 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c4 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c4 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c4 .c8 {
  margin-left: 0;
}

.c4 .c6 {
  margin: 0;
}

.c4 .c8 {
  margin-left: 4px;
  margin-right: 0px;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c10:hover {
  background-color: #3664c8;
}

.c10[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <ul
    class="uc-fe-pagination uc-fe-pagination-md c0"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="uc-fe-pagination-disabled uc-fe-pagination-prev"
      title="上一页"
    >
      <i
        class="icon__left uc-fe-pagination-prev-icon "
      />
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      class="uc-fe-pagination-jump-next"
      tabindex="0"
      title="向后 5 页"
    >
      <i
        class="icon__more-three uc-fe-pagination-jump-icon "
      />
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-10"
      tabindex="0"
      title="10"
    >
      <a>
        10
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" uc-fe-pagination-next"
      tabindex="0"
      title="next page"
    >
      <i
        class="icon__right uc-fe-pagination-next-icon "
      />
    </li>
    <li
      class="uc-fe-pagination-options"
    >
      <div
        class="uc-fe-pagination-options-size-changer c1"
        placeholder="请选择"
      >
        <div>
          <div
            class="c2"
          >
            <div>
              10 items/page
            </div>
            <i
              class="icon__down c3 "
            />
          </div>
        </div>
      </div>
      <div
        class="uc-fe-pagination-options-quick-jumper"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              autocomplete="off"
              class="c6 c7"
              max="10"
              min="1"
              step="1"
              value=""
            />
            <span
              class="c8 c9"
            >
              <span
                class="uc-fe-pagination-options-quick-jumper-text"
              >
                /10
              </span>
            </span>
          </div>
        </div>
        <button
          class="uc-fe-pagination-options-gobutton c10"
          type="button"
        >
          CONFIRM
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`LocaleProvider demo -- localefile 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c7::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7::-moz-placeholder {
  color: #abb4c3;
}

.c7:-ms-input-placeholder {
  color: #abb4c3;
}

.c7::placeholder {
  color: #abb4c3;
}

.c9 {
  color: #c3cad9;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c4 .c6 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c4 .c6:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c4 .style__HandlerUp-laNuFx,
.c4 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c4 .style__HandlerUp-laNuFx:hover,
.c4 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c4 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c4 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c4 .c8 {
  margin-left: 0;
}

.c4 .c6 {
  margin: 0;
}

.c4 .c8 {
  margin-left: 4px;
  margin-right: 0px;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c10:hover {
  background-color: #3664c8;
}

.c10[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <ul
    class="uc-fe-pagination uc-fe-pagination-md c0"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="uc-fe-pagination-disabled uc-fe-pagination-prev"
      title="prev page"
    >
      <i
        class="icon__left uc-fe-pagination-prev-icon "
      />
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      class="uc-fe-pagination-jump-next"
      tabindex="0"
      title="next 5 page"
    >
      <i
        class="icon__more-three uc-fe-pagination-jump-icon "
      />
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-10"
      tabindex="0"
      title="10"
    >
      <a>
        10
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" uc-fe-pagination-next"
      tabindex="0"
      title="next page"
    >
      <i
        class="icon__right uc-fe-pagination-next-icon "
      />
    </li>
    <li
      class="uc-fe-pagination-options"
    >
      <div
        class="uc-fe-pagination-options-size-changer c1"
        placeholder="请选择"
      >
        <div>
          <div
            class="c2"
          >
            <div>
              10 items/page
            </div>
            <i
              class="icon__down c3 "
            />
          </div>
        </div>
      </div>
      <div
        class="uc-fe-pagination-options-quick-jumper"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              autocomplete="off"
              class="c6 c7"
              max="10"
              min="1"
              step="1"
              value=""
            />
            <span
              class="c8 c9"
            >
              <span
                class="uc-fe-pagination-options-quick-jumper-text"
              >
                /10
              </span>
            </span>
          </div>
        </div>
        <button
          class="uc-fe-pagination-options-gobutton c10"
          type="button"
        >
          confirm
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`LocaleProvider demo -- localeprovider 1`] = `
.c5 {
  position: relative;
}

.c7 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c7::-webkit-input-placeholder {
  color: #abb4c3;
}

.c7::-moz-placeholder {
  color: #abb4c3;
}

.c7:-ms-input-placeholder {
  color: #abb4c3;
}

.c7::placeholder {
  color: #abb4c3;
}

.c9 {
  color: #c3cad9;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c4 .c6 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c4 .c6:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c4 .style__HandlerUp-laNuFx,
.c4 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c4 .style__HandlerUp-laNuFx:hover,
.c4 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c4 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c4 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c4 .c8 {
  margin-left: 0;
}

.c4 .c6 {
  margin: 0;
}

.c4 .c8 {
  margin-left: 4px;
  margin-right: 0px;
}

.c2 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c2:hover {
  border: 1px solid #4683e6;
}

.c3 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 12px;
  cursor: pointer;
  outline: none;
  display: inline-block;
  vertical-align: middle;
  color: #FFF;
  border-color: #4683e6;
  background-color: #4683e6;
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
}

.c10:hover {
  background-color: #3664c8;
}

.c10[disabled] {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  color: #6b798e;
  font-size: 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next,
.c0 .uc-fe-pagination-jump-prev,
.c0 .uc-fe-pagination-jump-next {
  outline: none;
  box-sizing: border-box;
  background-color: #fff;
  text-align: center;
  border-radius: 2px;
  margin-right: 5px;
  cursor: pointer;
  padding: 0 2px;
  display: inline-block;
  vertical-align: middle;
  min-width: 28px;
  height: 28px;
  line-height: 26px;
}

.c0 .uc-fe-pagination-item,
.c0 .uc-fe-pagination-prev,
.c0 .uc-fe-pagination-next {
  border: 1px solid #c3cad9;
}

.c0 .uc-fe-pagination-item:hover,
.c0 .uc-fe-pagination-prev:hover,
.c0 .uc-fe-pagination-next:hover {
  border-color: #4683e6;
  color: #fff;
  background-color: #4683e6;
}

.c0 .uc-fe-pagination-jump-prev:hover,
.c0 .uc-fe-pagination-jump-next:hover {
  color: #4074e1;
}

.c0 .uc-fe-pagination-item-active,
.c0 .uc-fe-pagination-item-active:hover {
  border-color: #4683e6;
  color: #4074e1;
  background-color: #f4f9ff;
  cursor: default;
}

.c0 .uc-fe-pagination-disabled,
.c0 .uc-fe-pagination-disabled:hover {
  border-color: #d9d9d9;
  background-color: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
}

.c0 .uc-fe-pagination-prev-icon,
.c0 .uc-fe-pagination-next-icon {
  cursor: inherit;
}

.c0 .uc-fe-pagination-options,
.c0 .uc-fe-pagination-options-size-changer,
.c0 .uc-fe-pagination-options-quick-jumper {
  display: inline-block;
  vertical-align: middle;
}

.c0 .uc-fe-pagination-options-size-changer {
  margin-right: 5px;
}

.c0 .uc-fe-pagination-options-gobutton {
  margin-left: 5px;
}

.c0 .uc-fe-pagination-quick-jumper-text,
.c0 .uc-fe-pagination-options-quick-jumper-text {
  color: #6b798e;
}

<div>
  <ul
    class="uc-fe-pagination uc-fe-pagination-md c0"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="uc-fe-pagination-disabled uc-fe-pagination-prev"
      title="上一页"
    >
      <i
        class="icon__left uc-fe-pagination-prev-icon "
      />
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-1 uc-fe-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <a>
        1
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <a>
        2
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <a>
        3
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <a>
        4
      </a>
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-5 uc-fe-pagination-item-before-jump-next"
      tabindex="0"
      title="5"
    >
      <a>
        5
      </a>
    </li>
    <li
      class="uc-fe-pagination-jump-next"
      tabindex="0"
      title="向后 5 页"
    >
      <i
        class="icon__more-three uc-fe-pagination-jump-icon "
      />
    </li>
    <li
      class="uc-fe-pagination-item uc-fe-pagination-item-10"
      tabindex="0"
      title="10"
    >
      <a>
        10
      </a>
    </li>
    <li
      aria-disabled="false"
      class=" uc-fe-pagination-next"
      tabindex="0"
      title="下一页"
    >
      <i
        class="icon__right uc-fe-pagination-next-icon "
      />
    </li>
    <li
      class="uc-fe-pagination-options"
    >
      <div
        class="uc-fe-pagination-options-size-changer c1"
        placeholder="请选择"
      >
        <div>
          <div
            class="c2"
          >
            <div>
              10 items per page
            </div>
            <i
              class="icon__down c3 "
            />
          </div>
        </div>
      </div>
      <div
        class="uc-fe-pagination-options-quick-jumper"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              autocomplete="off"
              class="c6 c7"
              max="10"
              min="1"
              step="1"
              value=""
            />
            <span
              class="c8 c9"
            >
              <span
                class="uc-fe-pagination-options-quick-jumper-text"
              >
                /10
              </span>
            </span>
          </div>
        </div>
        <button
          class="uc-fe-pagination-options-gobutton c10"
          type="button"
        >
          CONFIRM
        </button>
      </div>
    </li>
  </ul>
</div>
`;
